--- a/contact-us.html
+++ b/contact-us.html
@@ -351,10 +351,21 @@
 					</div>
 
 					<div class="column">
-						<h3>Media<sup>1</sup></h3>
+						<h3>Media</h3>
 						<p>Please email us at:<br/><a href="mailto:mediainquiries@oaktreecapital.com" class="link-underline">mediainquiries@oaktreecapital.com</a></p>
 					</div>
 				</div>
+			</div>
+		</div>
+
+		<div class="warning-message info white">
+			<div class="appendix-content">
+				<span class="prefix">*</span><p>Office of affiliates of Oaktree-managed funds</p>
+				<div class="clear"></div>
+ 				<span class="prefix">**</span><p>Regulated by the Dubai Financial Services Authority, effective October 3, 2013</p>
+				<div class="clear"></div>
+				<span class="prefix">***</span><p>Authorised and regulated by the Financial Conduct Authority Registered in England, No. OC363917</p>
+				<div class="clear"></div>
 			</div>
 		</div>
 
