Add social icons on insights pages

--- a/article-example.html
+++ b/article-example.html
@@ -193,7 +193,7 @@
 				<a href="" class="btn secondary">Subscribe</a>
 			</div>
 
-			<div class="actions-wrapper">
+			<div class="actions-wrapper horizontal">
 				<a href="" class="listen">Watch Insights Live</a>
 				<a href="" class="download">Download PDF</a>
 			</div>
